package tutorial; // C++是namespace, Java是包路径

import "facestyle.proto";

option java_package = "com.learn.proto"; // 如果注释掉, 包名由package(tutorial)指定
option java_outer_classname = "OuterAddressBook";  // Java一个文件只能有一个外部类

option optimize_for = SPEED; // 优化: SPEED|CODE_SIZE|LITE_RUNTIME
message Person {
    required string name = 1;
    required int32 id = 2;
    optional string email = 3;

    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }

    message PhoneNumber {
        required string number = 1;
        optional PhoneType type = 2 [default = HOME];
    }

    repeated PhoneNumber phone = 4;
}

message AddressBook {
    required FaceStyle style = 1;
    repeated Person person = 2;
}
